--- a/lit.bib
+++ b/lit.bib
@@ -1,5 +1,5 @@
-@manual{sample,
+@manual{V354
   author = {TU Dortmund},
-  title = {Versuch zum Literaturverzeichnis},
-  year = 2014
+  title = {V354 - Gedämpfte und erzwungene Schwingungen},
+  year = 2019
 }
