--- a/content/var-freq.tex
+++ b/content/var-freq.tex
@@ -1,6 +1,6 @@
 \begin{table}[!htp]
 \centering
-\caption{Daten der Messung mit variabler Frequenz mit $U_0 = 6.55$ V.}
+\caption{Die Amplituden und Phasenverschiebung in Frequenzabhänigkeit mit $U_0 = 6.55$ V.}
 \label{tab:var-freq}
 \begin{tabular}{S[table-format=2] S[table-format=2.1] S[table-format=1.2]}
 \toprule
