--- a/content/zeit-amplitude.tex
+++ b/content/zeit-amplitude.tex
@@ -1,6 +1,6 @@
 \begin{table}[!htp]
 \centering
-\caption{Die Daten der Amplitudenmessung bei der gedämpften Schwingung.}
+\caption{Die Amplituden zu den jeweiligen Zeitpunkten zur Bestimmung des Dämpfungswiderstandes.}
 \label{tab:zeit-amplitude}
 \begin{tabular}{S[table-format=3.0] S[table-format=1.2]}
 \toprule
