Zitate heile gemacht

--- a/content/diskussion.tex
+++ b/content/diskussion.tex
@@ -2,7 +2,7 @@
 \label{sec:Diskussion}
 
 Der bestimmte Wert für $R = (79,\~8 \pm 0,\~9)$ $\symup{\Omega}$ in der ersten Messung beträgt $266 \%$ des Theoriewertes.
-Diese systematische Abweichung lässt sich durch Kabelwiderstände sowie Innenwiderstände der Geräte erklären, die sich schnell auf circa $50 \symup{\Omega}}$ aufsummieren.
+Diese systematische Abweichung lässt sich durch Kabelwiderstände sowie Innenwiderstände der Geräte erklären, die sich schnell auf circa $50 \symup{\Omega}$ aufsummieren.
 
 Der experimentell bestimmte Wert für den Widerstand, bei dem der aperiodische Grenzfall einsetzt, beträgt $R_\text{ap} = (1355 \pm 5)$ $\symup{\Omega}$. Dies ist lediglich $80 \%$ des Theoriewertes.
 Diese Abweichung lässt sich ebenfalls durch weitere Innenwiderstände erklären. Des Weiteren kann nicht ausgeschlossen werden, dass der zur Messung verwendete Tastkopf nicht einen frequenzabhängigen Widerstand hat.
