--- a/content/theorie.tex
+++ b/content/theorie.tex
@@ -33,7 +33,7 @@
         \end{equation}
         herleiten. Beim Lösen müssen zwei Fälle unterschieden werden, eine reelle, sowie eine imaginäre Lösung. 
         Lösen der Differentialgleichung ergibt im Allgemeinen
-        \begin{equation}
+        \begin{equation} %Das brauch ich in U
             \label{eqn:strom_allgemein}
             I(t) = e^{-2 \pi \mu t} (U_1 e^{i 2 \pi \nu t} + U_2 e^{-i 2 \pi \nu t}),
         \end{equation}
@@ -114,7 +114,7 @@
         \end{equation}
         auf. Der Faktor $q$ um den die Kondensatorspannung erhöht nennt sich Resonanzüberhöhung oder Güte. 
         Sie ist gegeben durch 
-        \begin{equation}   
+        \begin{equation} %Da gibt es noch ne Formel 1/r sqrt(l/c) = q
             \label{eqn:güte}
             q = \frac {\omega_0} {\omega_+ - \omega_-},
         \end{equation}
