--- a/content/auswertung.tex
+++ b/content/auswertung.tex
@@ -49,9 +49,8 @@ Der Wert für die Induktivität der Spule $L$ wurde angegeben und ist mit weiter
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Aperiodischer Grenzfall}
 
-%TODO: Gleichung
-Nach GLEICHUNG ergibt sich der errechnete Wert für den Widerstand, mit dem der aperiodische Grenzfall erreicht wird, als
-
+Nach \eqref{eqn:bedingung_aperiodischerGrenzfall} ergibt sich der errechnete Wert für den Widerstand, mit dem der aperiodische Grenzfall erreicht wird, als
+eqn:bedingung_aperiodischerGrenzfall
 \begin{center}
     $R_\text{Theorie} = (1678 \pm 8)$ $\symup{\Omega}$,
 \end{center}
@@ -75,9 +74,8 @@ bestimmt.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Bestimmung der Güte mittels variabler Frequenz}
 
-%TODO: Gleichung
 Die gemessenen Werte sind in \autoref{tab:var-freq} zu finden. Diese werden zur Veranschaulichung in einem Plot aufgetragen, dabei werden die Frequenzen $f$ nach $\omega = 2 \pi f$ in Kreisfrequenzen umgerechnet.
-Die Theoriekurve, die sich nach GLEICHUNG berechnet, wird in diesem Plot ebenfalls aufgetragen.
+Die Theoriekurve, die sich nach \eqref{eqn:Kondensatorspannung} berechnet, wird in diesem Plot ebenfalls aufgetragen.
 
 \input{../content/var-freq.tex}
 
@@ -126,10 +124,8 @@ Diese beträgt
     $\omega_\text{res} = 2,\~2 \cdot 10^{5}$ $\frac{1}{\symup{s}}$.
 \end{center}
 
-
-%TODO: Gleichung
 Die Frequenzen $\omega_1$ und $\omega_2$ bei denen die Phasenverschiebung $\frac{\pi}{4}$ beziehungsweise $\frac{3\pi}{4}$ beträgt, 
-berechnen sich nach GLEICHUNG als
+berechnen sich nach \eqref{eqn:omega12} als
 
 \begin{center}
     $\omega_1 = (2,\~79 \pm 0,\~01) \cdot 10^{5}$ $\frac{1}{\symup{s}}$
@@ -160,10 +156,7 @@ wobei die einzelnen partiellen Ableitungen im Folgenden aufgeführt sind:
     \label{fig:phase}
 \end{figure}
 
-%TODO: Gleichung
-Um die experimente$\omega_1 = 2,\~1 \cdot 10^{5}$ $\frac{1}{\symup{s}}$
-
-    $\omega_2 = 2,\~8 \cdot 10^{5}$ $\frac{1}{\symup{s}}$.llen Werte zu bestimmen, werden die Werte in \autoref{tab:var-freq} in einem Plot aufgetragen. Des Weiteren wird in diesem die Theoriekurve, die sich nach GLEICHUNG berechnet, aufgetragen.
+Um die experimentellen Werte zu bestimmen, werden die Werte in \autoref{tab:var-freq} in einem Plot aufgetragen. Des Weiteren wird in diesem die Theoriekurve, die sich nach \eqref{eqn:phasenverschiebung} berechnet, aufgetragen.
 Der entsprechende Plot ist in \autoref{fig:phase} zu sehen.
 Daraus werden die Werte für die Frequenzen abgelesen, bei denen die Phasenverschiebung $\frac{\pi}{4}$ beziehungsweise $\frac{3\pi}{4}$ beträgt. 
 Diese lauten
