--- a/content/auswertung.tex
+++ b/content/auswertung.tex
@@ -29,8 +29,7 @@ Die entsprechenden Parameter werden mittels Python 3.7.0 als
     $b = (2,\~23 \pm 0,\~01) \ln(\symup{V})$
 \end{center}
 
-%TODO: Gleichung
-bestimmt. Aus GLEICHUNG folgt direkt, dass 
+bestimmt. Der Kosinus in \eqref{eqn:reell_lösung} liefert immer $1$ beziehungsweise $-1$, sodass die Relation
 
 \begin{center}
     $R = a \cdot 2L = (79.8 \pm 0.9)$ $\symup{\Omega}$
@@ -105,7 +104,7 @@ Der Fehler nach Gauß berechnet sich dabei nach
     \Delta q_\text{theo} = \sqrt{\cdot \frac{L}{C}} \cdot \sqrt{ \bigg( \frac{1}{R^2} \cdot \Delta R \bigg)^2 + \bigg(\frac{1}{2RC} \cdot \Delta L \bigg)^2 + \bigg(\frac{L}{2RC^2} \cdot \Delta C \bigg)^2}.
 \end{equation}
 
-Die Resonanzfrequenz wird nach GLEICHUNG als
+Die Resonanzfrequenz wird nach \eqref{eqn:güte} als
 
 \begin{center}
     $\omega_\text{res} = (2,\~314 \pm 0,\~001) \cdot 10^{5}$ $\frac{1}{s}$
