--- a/content/durchfuehrung.tex
+++ b/content/durchfuehrung.tex
@@ -22,10 +22,10 @@
         Für diesen Versuchsteil wird die Schaltung wie in \autoref{fig:schaltung2} zu sehen aufgebaut, jedoch ohne die Nutzung des Zweitkanals des Oszillographen.
         Der Sinuswellengenerator gibt sinusförmige Wellen verschiedener Frequenzen auf den LRC-Kreis. Wie zuvor gibt ein Tastkopf die Schwingung
         wieder auf dem Oszillographen aus. Zuvor wird mithilfe des Tastkopfes die reine Erregerspannung gemessen und aufgenommen. Zu Beachten 
-        ist weiterhin, dass in diesem Aufbau der größere der beiden Festwiderstände zu Benutzen ist. In Abängigkeit der eingestellten Frequenzen
-        werden nun die auf dem Oszillographen ausgegebenen Amplituden mittels der Cursor-Funktion ausgemessen und in Abängigkeit der eingestellten
-        Frequenz aufgenommen. Die einzustellenden Frequenzen sind im Bereich von $12$Hz bis $30$Hz und $44$ bis $62$Hz in $2$Hz Schritten zu wählen;
-        im Bereich von $32$Hz bis $42$Hz sind $1$Hz Schritte zu wählen.
+        ist weiterhin, dass in diesem Aufbau der größere der beiden Festwiderstände zu Benutzen ist. In Abhängigkeit der eingestellten Frequenzen
+        werden nun die auf dem Oszillographen ausgegebenen Amplituden mittels der Cursor-Funktion ausgemessen und in Abhängigkeit der eingestellten
+        Frequenz aufgenommen. Die einzustellenden Frequenzen sind im Bereich von $12$\, kHz bis $30$\, kHz und $44$ \, kHz bis $62$\, kHz in $2$ \, kHz Schritten zu wählen;
+        im Bereich von $32$\, kHz bis $42$\, kHz sind $1$\, kHz Schritte zu wählen.
         \begin{figure}
             \centering
             \includegraphics[width=\textwidth]{content/s2.png}
@@ -35,4 +35,4 @@
     \subsection{Untersuchung der Frequenzabhängigkeit der Phasendifferenz}
         Es wird wieder die Schaltung \autoref{fig:schaltung2} verwendet, diesmal jedoch unter Nutzung beider Oszillographeneingänge. Der Oszillograph
         zeigt nun zwei Kurven an. Der Abstand der Nulldurchgänge der beiden Kurven ist mittels der Oszillographen auszumessen und in 
-        Abängigkeit von der Frequenz zu notieren. Die einzustellenden Frequenzen sind die Selben, wie im Versuchsteil zuvor.    
+        Abhängigkeit von der Frequenz zu notieren. Die einzustellenden Frequenzen sind die Selben, wie im Versuchsteil zuvor.    
