--- a/content/auswertung.tex
+++ b/content/auswertung.tex
@@ -29,13 +29,14 @@ Die entsprechenden Parameter werden mittels Python 3.7.0 als
     $b = (2,\~23 \pm 0,\~01) \ln(\symup{V})$
 \end{center}
 
-bestimmt. Der Kosinus in \eqref{eqn:reell_lösung} liefert immer $1$ beziehungsweise $-1$, sodass die Relation
+bestimmt. Der Kosinus in \eqref{eqn:reell_lösung} liefert immer $1$ beziehungsweise $-1$, da immer nur die Maxima beziehungsweise Minima gemessenen werden.
+Somit gilt die Relation
 
 \begin{center}
-    $R = a \cdot 2L = (79.8 \pm 0.9)$ $\symup{\Omega}$
+    $R = a \cdot 2L = (79.8 \pm 0.9)$ $\symup{\Omega}$.
 \end{center}
 
-gilt. Der zugehörige Fehler nach Gauß berechnet sich dabei nach
+Der zugehörige Fehler nach Gauß berechnet sich dabei nach
 
 \begin{equation}
     \Delta R = 2 \sqrt{ \bigg( L \cdot \Delta a \bigg)^2 + \bigg( a \cdot \Delta L \bigg)^2 }.
@@ -62,13 +63,12 @@ wobei sich der Fehler nach Gauß aus %R = 2*sqrt(L/C)
 
 berechnet.
 
-Der durch Variation des Widerstandes Wert wird als
+Der Wert, der durch Variation des Widerstandes experimentell bestimmt wird, beträgt
 
 \begin{center}
-    $R_\text{ap} = (1355 \pm 5)$ $\symup{\Omega}$
+    $R_\text{ap} = (1355 \pm 5)$ $\symup{\Omega}$.
 \end{center}
 
-bestimmt.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Bestimmung der Güte mittels variabler Frequenz}
