--- a/lit.bib
+++ b/lit.bib
@@ -1,5 +1,8 @@
-@manual{V354,
+@web{V354,
   author = {TU Dortmund},
   title = {V354 - Gedämpfte und erzwungene Schwingungen},
-  year = 2019
+   date = 2019,
+  month = jan,
+  day = 13,
+  url = {http://129.217.224.2/HOMEPAGE/PHYSIKER/BACHELOR/AP/SKRIPT/V354.pdf}
 }
