--- a/content/auswertung.tex
+++ b/content/auswertung.tex
@@ -73,7 +73,7 @@ Der Wert, der durch Variation des Widerstandes experimentell bestimmt wird, betr
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Bestimmung der Güte mittels variabler Frequenz}
 
-Die gemessenen Werte sind in \autoref{tab:var-freq} zu finden. Diese werden zur Veranschaulichung in einem Plot aufgetragen, dabei werden die Frequenzen $f$ nach $\omega = 2 \pi f$ in Kreisfrequenzen umgerechnet.
+Die gemessenen Werte der Spannung und Frequenz sind in \autoref{tab:var-freq} zu finden. Diese werden zur Veranschaulichung in einem Plot aufgetragen, dabei werden die Frequenzen $f$ nach $\omega = 2 \pi f$ in Kreisfrequenzen umgerechnet.
 Die Theoriekurve, die sich nach \eqref{eqn:Kondensatorspannung} berechnet, wird in diesem Plot ebenfalls aufgetragen.
 
 \input{../content/var-freq.tex}
@@ -91,8 +91,7 @@ Aus diesen Daten lässt sich die Güte $q_\text{exp}$ durch Ablesen als
     $q_\text{exp} = 2,\~56$
 \end{center}
 
-%TODO: Gleichung
-bestimmen. Der zugehörige Theoriewert berechnet sich nach GLEICHUNG als
+bestimmen. Der zugehörige Theoriewert berechnet sich nach \eqref{eqn:güte} als
 
 \begin{center}
     $q_\text{theo} = 3,\~09 \pm 0,\~01$.
@@ -116,7 +115,7 @@ bestimmt, wobei sich der zugehörige Fehler nach Gauß nach
     \Delta \omega_\text{res} = \dfrac{1}{\sqrt{\frac{1}{LC} - \frac{R^2}{2L^2}}} \cdot \sqrt{ \bigg( \frac{R}{2L^2} \cdot \Delta R \bigg)^2 + \bigg( \frac{L - CR^2}{2CL^3} \cdot \Delta L \bigg)^2 + \bigg( \frac{1}{2LC^2} \cdot \Delta C \bigg)^2 }
 \end{equation}
 
-berechnet. Der zur experimentellen Bestimmung der Resonanzfrequenz wird die Stelle der maximalen Ampltiude abgelesen.
+berechnet. Zur experimentellen Bestimmung der Resonanzfrequenz wird die Frequenz an der Stelle der maximalen Ampltiude abgelesen.
 Diese beträgt
 
 \begin{center}
