--- a/content/auswertung.tex
+++ b/content/auswertung.tex
@@ -33,7 +33,7 @@ bestimmt. Der Kosinus in \eqref{eqn:reell_lösung} liefert immer $1$ beziehungsw
 Somit gilt die Relation
 
 \begin{center}
-    $R = a \cdot 2L = (79.8 \pm 0.9)$ $\symup{\Omega}$.
+    $R = a \cdot 2L = (79,\~8 \pm 0,\~9)$ $\symup{\Omega}$.
 \end{center}
 
 Der zugehörige Fehler nach Gauß berechnet sich dabei nach
@@ -134,7 +134,7 @@ berechnen sich nach \eqref{eqn:omega12} als
 Der Fehler nach Gauß errechnet sich dabei nach
 
 \begin{equation}
-    \Delta \omega_{1,2} = \sqrt{\bigg( \frac{\partial \omega_{+,-}}{\partial C} \cdot \Delta C \bigg)^2 + \bigg( \frac{\partial \omega_{+,-}}{\partial L} \cdot \Delta L \bigg)^2 + \bigg( \frac{\partial \omega_{+,-}}{\partial R} \cdot \Delta R \bigg)^2}, 
+    \Delta \omega_{1,2} = \sqrt{\bigg( \frac{\partial \omega_{1,2}}{\partial C} \cdot \Delta C \bigg)^2 + \bigg( \frac{\partial \omega_{1,2}}{\partial L} \cdot \Delta L \bigg)^2 + \bigg( \frac{\partial \omega_{1,2}}{\partial R} \cdot \Delta R \bigg)^2}, 
 \end{equation}
 
 wobei die einzelnen partiellen Ableitungen im Folgenden aufgeführt sind:
